<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_sheet"
    android:paddingTop="12dp"
    android:paddingBottom="24dp">

    <View
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/divider"/>

    <TextView android:id="@+id/menu_sleep" style="@style/MenuRow"
        android:text="@string/sleep_timer"
        android:drawableStart="@drawable/ic_timer"/>

    <TextView android:id="@+id/menu_eq" style="@style/MenuRow"
        android:text="@string/equalizer"
        android:drawableStart="@drawable/ic_eq"/>

    <TextView android:id="@+id/menu_theme" style="@style/MenuRow"
        android:text="@string/theme"
        android:drawableStart="@drawable/ic_theme"/>

    <TextView android:id="@+id/menu_rescan" style="@style/MenuRow"
        android:text="@string/rescan"
        android:drawableStart="@drawable/ic_refresh"/>

    <TextView android:id="@+id/menu_about" style="@style/MenuRow"
        android:text="@string/about"
        android:drawableStart="@drawable/ic_info"/>
</LinearLayout>
